--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "react-hook-form": "^7.49.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
