--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
+    
+    "esModuleInterop": true,
+    // allow using .ts extensions in import/export
     "allowImportingTsExtensions": true,
+    // nodenext - supports both ECMAScript imports and CommonJS require
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
@@ -20,7 +20,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-    "exclude": ["server"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
