--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "universal-cookie": "^7.0.1"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/router-vite-plugin": "^1.4.9",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
